Started to code modified version of pipex, and created a new struct named pipex in minishell.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
 		"unistd.h": "c",
 		"readline.h": "c",
 		"history.h": "c",
-		"get_next_line.h": "c"
+		"get_next_line.h": "c",
+		"minishell.h": "c"
 	}
 }
