--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
 	"files.associations": {
-		"minishell.h": "c"
+		"minishell.h": "c",
+		"stdio.h": "c",
+		"libft.h": "c",
+		"limits.h": "c",
+		"stdlib.h": "c"
 	}
 }
